--- a/MinimalApi/appsettings.json
+++ b/MinimalApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=RICHKAZZ\\SQLEXPRESS;Database=MinimalApiDb;MultipleActiveResultSets=true;Trusted_Connection=True;Encrypt=false;"
+    "DefaultConnection": "Server=UserName\\SQLEXPRESS;Database=MinimalApiDb;MultipleActiveResultSets=true;Trusted_Connection=True;Encrypt=false;"
   },
   "Logging": {
     "LogLevel": {
